# EmojiBench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  show_repo.md
artifacts/emoji-bench-dataset-100/: README.md  manifest.json  test.jsonl
emoji_bench/: continuation_formatter.py  jsonl_io.py  model_registry.py
emoji_bench/eval/: __init__.py  matrix.py  paths.py  runner.py
emoji_bench/providers/: __init__.py  anthropic.py  clients.py  continuation.py  gemini.py  mistral.py  openai.py  transport.py
emoji_bench/scoring/: __init__.py  continuation_scorer.py
scripts/: evaluate_continuation.py  plot_final_answer.py  score_continuation.py
